Fixed styling and socket functionality

--- a/public/assets/main.less
+++ b/public/assets/main.less
@@ -189,8 +189,9 @@ table{
 }
 .food-list-name{
     font-size: 30px;
+    color:@secondary;
 }
 .food-list-button{
-    text-decoration: none;
+    text-decoration: underline;
     color: @secondary;
 }
